--- a/clip-path/clip_path.css
+++ b/clip-path/clip_path.css
@@ -12,7 +12,7 @@ body{
 
 .parent{
     height: 100%;
-    /* width: 100%; */
+    width: 100%;
     position: relative;
 
     
@@ -136,7 +136,7 @@ hr{
 
 .footer{
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-evenly;
     margin-top: 60px;
     text-align: center;
     margin-left: 150px;
