--- a/Wave/wave_css.css
+++ b/Wave/wave_css.css
@@ -13,28 +13,32 @@
 }
 
 .wave1{
+    height: 100%;
+    width: 100%;
     display: flex;
     justify-items: center;
     align-items: center;
     align-content: center;
     flex-direction: column;
     text-align: center;
-    margin-bottom: 300px;
+    /* margin-bottom: 200px; */
 }
 
 .wave{
-    height: 100px;
+    height: 300px;
     width: 100%;
     
 }
 svg{
-    height: 460px;
+    height: 100%;
     width: 100%;
-    margin-top: 370px;
+    margin-top: 350px;
+
 
 }
 .text{
     color: white;
+    margin-top: -200px;
     
 }
 h3{
@@ -59,6 +63,7 @@ hr{
     justify-content: space-around;
     justify-items: center;
     text-align: center;
+    margin-top: 200px;
    
 }
 
@@ -67,7 +72,7 @@ hr{
     border-radius: 50%;
     background-size: cover;
     background-position: center;
-    margin-top: 170px;
+    margin-top: 155px;
     transition: all 800ms;
     transition-delay: 100ms;
 }
@@ -79,7 +84,7 @@ hr{
     background-size: cover;
     transition: all 800ms;
     transition-delay: 100ms;
-    margin-top: 130px;
+    margin-top: 120px;
 }
 
 .img3{
@@ -89,7 +94,7 @@ hr{
     background-position: center;
     transition: all 800ms;
     transition-delay: 100ms;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .img4{
@@ -99,7 +104,7 @@ hr{
     background-size: cover;
     transition: all 800ms;
     transition-delay: 100ms;
-    margin-top: 80px;
+    margin-top: 90px;
 
 }
 
@@ -110,7 +115,7 @@ hr{
     background-position: center;
     transition: all 800ms;
     transition-delay: 100ms;
-    margin-top: 40px;
+    margin-top: 50px;
 }
 .text1{
     color: black;
