--- a/Figma-file/figma.css
+++ b/Figma-file/figma.css
@@ -50,7 +50,6 @@
     font-size: 1.5rem;
     border-radius: 10px;
     opacity: 1;
-    
 }
 
 .howit{
@@ -58,6 +57,10 @@
     font-size: 1.2rem;
     background-color: rgb(240, 232, 222);
     opacity: 1;
+}
+
+#teamflo{
+    font-size: 2rem;
 }
 
 .produc{
@@ -284,7 +287,7 @@ hr{
     width: 100%;
     text-align: center;
     font-size: 1rem;
-    margin: 20px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -295,7 +298,7 @@ hr{
     width: 100%;
     text-align: center;
     font-size: 1rem;
-    margin: 20px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -776,6 +779,7 @@ h3{
         align-content: center;
         margin-bottom: 20%;
         margin-left: 200px;
+        font-size: 2rem;
     }
     .headercontant{
         display: flex;
@@ -899,7 +903,7 @@ h3{
         width: 100%;
         text-align: center;
         font-size: 1rem;
-        margin: 20px;
+        padding: 20px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
@@ -910,7 +914,7 @@ h3{
         width: 100%;
         text-align: center;
         font-size: 1rem;
-        margin: 20px;
+        padding: 20px;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
