--- a/clip-path/clip_path.css
+++ b/clip-path/clip_path.css
@@ -13,6 +13,7 @@ body{
 .parent{
     height: 100%;
     width: 100%;
+    position: relative;
    
 
     
@@ -57,9 +58,15 @@ span{
 }
 
 .text{
-    width: 500px;
-    margin: 100px 0px 0px 400px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
     text-align: center;
+    margin-top: 100px;
+
 }
 
 .welcom{
@@ -72,7 +79,20 @@ hr{
 }
 
 .lorem{
+    width: 35%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-content: center;
     text-align: center;
+}
+
+.icon{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .fa-angle-left{
@@ -81,28 +101,22 @@ hr{
     border: 1px solid red;
     padding: 12px;
     background-color: aliceblue;
-    margin-left: 30px;
-
 }
 
 .fa-angle-right{
     height: 40px;
     width: 40px;
-    margin-left: 88%;
     border: 1px solid red;
     padding: 12px;
     background-color: rgb(17, 204, 98);
-    
-
 }
 
 .button{
     display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
-    align-content: center   ;
-    margin-left: 38%;
-
+    align-content: center;
 }
 
 .button1{
@@ -121,6 +135,7 @@ hr{
 }
 
 .icon2{
+    position: absolute;
     height: 40px;
     width: 40px;
     border: 1px solid red;
@@ -128,18 +143,18 @@ hr{
     padding: 10px;
     background-color: rgba(219, 227, 235, 0.993);
     margin-left: 49%;
-    margin-top: 0px;    
-
+    margin-top: -25px;
+    z-index: 1;    
 }
 
 .footer{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     align-content: center;
     margin-top: 60px;
     text-align: center;
-    margin-left: 150px;
 }
 
 .fa-infinity{
