--- a/Figma-file/figma.css
+++ b/Figma-file/figma.css
@@ -39,6 +39,7 @@ nav{
 .wrapper{
     display: flex;
     align-items: center;
+    opacity: 1;
     justify-content: space-between;
     transition: all 300ms;
 }
@@ -1697,7 +1698,7 @@ h3{
         }
     }
 
-    @media screen and (max-width:768px) {
+    @media screen and (max-width:768px) and (min-width:320px) {
         .header{
             display: flex;
             justify-content: space-between;
@@ -1712,6 +1713,7 @@ h3{
         }
 
         .wrapper{
+            opacity: 0;
             visibility: hidden;
             position: absolute;
             flex-wrap: wrap;
@@ -1719,29 +1721,6 @@ h3{
         }
         
     }
-
-@media only screen and (min-width: 320px) and (max-width: 480px) {
-    .header{
-        flex-direction: row;
-        position: relative;
-    }
-
-    .fa-bars{
-        visibility: visible ;
-        display: block;
-    }
-
-    .wrapper{
-        visibility: hidden;
-        flex-direction: column;
-        /* position: absolute; */
-        flex-wrap: wrap;
-        top:-100px;
-        gap: 0px;
-    }
-
-}
-
     
     @media screen and (max-width:600px){
 
