--- a/Figma-file/figma.css
+++ b/Figma-file/figma.css
@@ -680,7 +680,7 @@ h3{
 
 
 /* ***************** @media quary ************* */
-@media screen and (max-width:950px){
+@media screen and (max-width:992px) and (min-width:768px){
 
     .header{
         display: flex;
@@ -700,6 +700,57 @@ h3{
         align-items: center;
     }
         
+}
+
+
+
+@media screen and (max-width:768px) and (min-width:480px) {
+    .header{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        position: relative;
+        margin: auto;
+    }
+
+    .fa-bars{
+        visibility: visible ;
+        display: block;
+    }
+
+    .wrapper{
+        opacity: 0;
+        font-size: 0.3rem;
+        visibility: hidden;
+        position: absolute;
+        flex-wrap: wrap;
+        gap: 0px;
+    }
+    
+}
+@media screen and (max-width:480px) {
+    .header{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        position: relative;
+        margin: auto;
+    }
+
+    .fa-bars{
+        visibility: visible ;
+        display: block;
+    }
+
+    .wrapper{
+        opacity: 0;
+        font-size: 0.2rem;
+        visibility: hidden;
+        position: absolute;
+        flex-wrap: wrap;
+        gap: 0px;
+    }
+    
 }
 
 /* ****** @media quary ****** */
@@ -1697,30 +1748,6 @@ h3{
            
         }
     }
-
-    @media screen and (max-width:768px) and (min-width:320px) {
-        .header{
-            display: flex;
-            justify-content: space-between;
-            flex-direction: row;
-            position: relative;
-            margin: auto;
-        }
-
-        .fa-bars{
-            visibility: visible ;
-            display: block;
-        }
-
-        .wrapper{
-            opacity: 0;
-            visibility: hidden;
-            position: absolute;
-            flex-wrap: wrap;
-            gap: 0px;
-        }
-        
-    }
     
     @media screen and (max-width:600px){
 
@@ -2109,10 +2136,10 @@ h3{
             justify-content: space-around;
             align-items: center;
             align-content: center;
+            text-align: center;
             text-decoration: none;
             column-gap: 3%;
-            margin: 30px 70px 100px 0px;
-            margin-left: 70px;
+            margin: 30px 70px 100px 40px;
         }
         
         .ul2 a{
