--- a/Wave/wave_css.css
+++ b/Wave/wave_css.css
@@ -155,14 +155,15 @@ hr{
     margin-top: 500px;
     position: absolute;
     visibility: hidden;
-    bottom: 50px;
+    margin-left: -7px;
+    bottom: 60px;
     transition: bottom 600ms;
     transition-delay: 300ms;
 }
 
 .box1:hover .text1{
     width: 100px;
-    bottom:30px;
+    bottom:40px;
     color: rgba(107, 94, 74, 0.884);
     visibility: visible;
 } 
@@ -182,6 +183,7 @@ hr{
     margin-top: 50px;
     position: absolute;
     visibility: hidden;
+    margin-left: -25px;
     bottom: 100px;
     transition: bottom 600ms;
     transition-delay: 300ms;
@@ -207,6 +209,7 @@ hr{
     height:0;
     width:0;
     visibility: hidden;
+    margin-left: -25px;
     bottom: 160px;
     transition: bottom 600ms;
     transition-delay: 300ms;
@@ -233,6 +236,7 @@ hr{
     width:0;
     position: absolute;
     visibility: hidden;
+    margin-left: -18px;
     bottom: 100px;
     transition: bottom 600ms;
     transition-delay: 300ms;
@@ -258,6 +262,7 @@ hr{
     width:20px;
     position: absolute;
     visibility: hidden;
+    margin-left: -15px;
     bottom: 130px;
     transition: bottom 600ms;
     transition-delay: 300ms;
